--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ $(window).resize(function() {
              <button class="glidebutton" style="top:80%; left:1%; position:relative">Thats great..!</button>
         </div>
         <div id="slide11" class="mainpicdiv" style=" background-image:url(img/p11.jpg); opacity:0">
-             <a href="v2/index.php"><button class="glidebutton" style="top:80%; left:46%; position:relative">Who are you?</button></a>
+             <a href="v2/index.html"><button class="glidebutton" style="top:80%; left:46%; position:relative">Who are you?</button></a>
         </div>
         <h1 id="seo" style="display:none">
             To create platform to hundreds and thousands of enthusiastic socialistic pioneers who are willing to deliver their part to the underprivileged by connecting the individuals who are willing to help to the ones who are in need of help.
@@ -88,7 +88,7 @@ $(window).resize(function() {
         <div id="bottombarbg"></div>
         <div id="bottombar">
             <button style="position:absolute; left:0;" id="skipbutton" class="bottombutton" onclick="window.location='./v2/';">Already seen this page before? Click here</button>
-            <button style="position:absolute; right:0;" id="termsbutton" class="bottombutton" onclick="window.location='./v2/terms.php';">Terms & Privacy</button>
+            <button style="position:absolute; right:0;" id="termsbutton" class="bottombutton" onclick="window.location='./v2/terms.html';">Terms & Privacy</button>
             <button style="position:absolute; left:0; display:none" id="backbutton" class="bottombutton">< back</button>
         </div>
         <div class="termstab">Terms</div>
