--- a/v2/index.html
+++ b/v2/index.html
@@ -53,7 +53,7 @@
             <a class="topMenu_btn page-scroll" href="#main_impact_cont"><div id="impactbutton" class="nobutton">Create Impact</div></a>
             <a class="topMenu_btn page-scroll" href="#main_connect_cont"><div id="connectbutton" class="nobutton">Connect</div></a>
             <a class="topMenu_btn" href="./people.php"><div id="aboutusbutton" class="nobutton">Team</div></a>
-            <a class="topMenu_btn" href="../index.php"><div id="aboutusbutton" class="nobutton">Concept</div></a>
+            <a class="topMenu_btn" href="../index.html"><div id="aboutusbutton" class="nobutton">Concept</div></a>
         </div>
     </header>
     <img src="img/common/slide1_1.jpg" style="width: 100%">
