Fixed people and gallery

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ $(window).resize(function() {
         </h1>
         <div id="bottombarbg"></div>
         <div id="bottombar">
-            <button style="position:absolute; left:0;" id="skipbutton" class="bottombutton" onclick="window.location='./v2/';">Already seen this page before? Click here</button>
+            <button style="position:absolute; left:0;" id="skipbutton" class="bottombutton" onclick="window.location='./v2/index.html';">Already seen this page before? Click here</button>
             <button style="position:absolute; right:0;" id="termsbutton" class="bottombutton" onclick="window.location='./v2/terms.html';">Terms & Privacy</button>
             <button style="position:absolute; left:0; display:none" id="backbutton" class="bottombutton">< back</button>
         </div>
