--- a/v2/index.html
+++ b/v2/index.html
@@ -20,7 +20,7 @@
     <link href="css/common.css"  rel = "stylesheet" type = "text/css"/>
 
     <!-- Custom Fonts -->
-    <link href='http://fonts.googleapis.com/css?family=Ruda:400,700' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Ruda:400,700' rel='stylesheet' type='text/css'>
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 
 </head>
