Added google form

--- a/v2/index.html
+++ b/v2/index.html
@@ -434,11 +434,16 @@
             <h2>CREATE IMPACT</h2><br><br>
             <!--<img src="img/slide4.png"  width="100%" />-->
             <div class="row" id="form_contmain">
+
                 <div class="col-lg-3" style="text-align: center;padding-bottom: 47px;">
                     <img src="../v2/img/mainpage/mail.png" alt=""/>
                 </div>
-                <div class="flip-container col-lg-7" ontouchstart="this.classList.toggle('hover');">
-                    <div class="flipper">
+                <div class="flip-container col-lg-7">
+                    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScGzGuu07wrvgXrX0Qhv6Wp6Sq_Up4Kq1U947uOS0aq5q3OTg/viewform?embedded=true" width="640" height="991" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+                </div>
+                <div class="flip-container col-lg-7" style="display: none;" ontouchstart="this.classList.toggle('hover');">
+                    
+                    <div class="flipper" >
                         <div class="front" style="background-color: #fff">
                             <!-- front content -->
                             <div class="row" id="v5_form_text" style="margin:0;padding: 10%; text-align: left;">
